Bug 74273 - EDITING: Insert cell shift cell and comments down, deleting cell shift cell up and comment too much
Summary: EDITING: Insert cell shift cell and comments down, deleting cell shift cell u...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.1
Keywords: regression
: 74884 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-31 10:49 UTC by Andrea Bogazzi
Modified: 2015-01-24 12:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
ShiftingCellsDemo (13.50 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-01-31 10:49 UTC, Andrea Bogazzi
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Bogazzi 2014-01-31 10:49:06 UTC
Created attachment 93123 [details]
ShiftingCellsDemo

Version 4.2.0.1 and 4.2.0.3 at least. Not in 4.1.4

How to recreate bug:

Open new spreadsheet.
I insert some data in some cell one under the other,
then i add comment for every cell ( red dot in top right corner ).
I select some cell over those and i choose "delete"
Calc ask me to shift content up , i say yes.
Content is shifted up, comments are shifted up too much ( i didn't check relation between number of deleted cells and wrong shifting, but it looks like it shifts it double )
Comment 1 sophie 2014-01-31 16:16:43 UTC
So I step to reproduce
- right click on B11
- select Delete
- in the popup choose Move cells up
==> Comment that should be in B12 has disappeared and B11 has the wrong comment
Clicking Undo, the comment is still attached to the wrong cell and the one attached to cell in B14 has disappeared.
Clicking Redo, one more comment has disappeared. 
Set the Version - added Regression - Set to New, plateform All. 
Verified with Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71 Ubuntu 13.10 x64 - Sophie
Comment 2 Kohei Yoshida 2014-02-07 20:34:34 UTC
I'll take a look at this.
Comment 3 Commit Notification 2014-02-07 21:01:05 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=06c17598fb944aebcd0ef0783d2d4a81662208bb

fdo#74273: Adopt existing test to catch this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-02-07 21:01:22 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8f60dd0223f8834224b196153f0d8601403d76dc

fdo#74273: Let's not shift the note twice. Once is enough.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-02-07 21:01:43 UTC
4.2 backport request: https://gerrit.libreoffice.org/7938
Comment 6 Commit Notification 2014-02-08 17:27:02 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=92fa709032696af2fa1d23184d1bde282f94ff9e&h=libreoffice-4-2

fdo#74273: Let's not shift the note twice. Once is enough.


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Kohei Yoshida 2014-02-08 17:51:01 UTC
Fixed in 4.2.1.
Comment 8 Kohei Yoshida 2014-02-14 13:15:18 UTC
*** Bug 74884 has been marked as a duplicate of this bug. ***