fdo#74273: Let's not shift the note twice. Once is enough.

The notes already are shifted at the top of the function.  We don't
need this bottom one.

Change-Id: I10858d937674e236eecbc42ee08bf6eba197755a